// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Feeds /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="feedsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="feedsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="List"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No feeds"
            filteredData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "40%",
                },
                Object {
                  "key": "landingPageUrl",
                  "title": "Url",
                  "width": "60%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="feeds"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Feeds /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="feedsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="feedsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="List"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No feeds"
            filteredData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "40%",
                },
                Object {
                  "key": "landingPageUrl",
                  "title": "Url",
                  "width": "60%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="testSourceID1"
            isBtnCreateVisible={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="feeds"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <FeedsDetail
          currentPanel="feedsDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "dateCreated": 1482170593395,
              "landingPageUrl": "http://www.bbc.co.uk/news/health",
              "name": "BBC Health",
              "rssFeedUrl": "http://feeds.bbci.co.uk/news/health/rss.xml?edition=uk#",
              "sourceId": "testSourceID1",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="feedsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="feedsCreate"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Feeds /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="feedsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="feedsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="List"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No feeds"
            filteredData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "40%",
                },
                Object {
                  "key": "landingPageUrl",
                  "title": "Url",
                  "width": "60%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="feeds"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Feeds /> should renders correctly with feedsDetail and testing Create Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="feedsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="feedsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="List"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No feeds"
            filteredData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "40%",
                },
                Object {
                  "key": "landingPageUrl",
                  "title": "Url",
                  "width": "60%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="feeds"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
            />
          }
          currentPanel="feedsCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="feedsCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="feedsCreate"
          title="Create Feed"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Feeds /> should renders correctly with feedsDetail and testing Create Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="feedsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="feedsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="List"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No feeds"
            filteredData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "40%",
                },
                Object {
                  "key": "landingPageUrl",
                  "title": "Url",
                  "width": "60%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="feeds"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
            />
          }
          currentPanel="feedsCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="feedsCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="feedsCreate"
          title="Create Feed"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Feeds /> should renders correctly with feedsPanel and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="feedsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="feedsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="List"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No feeds"
            filteredData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "40%",
                },
                Object {
                  "key": "landingPageUrl",
                  "title": "Url",
                  "width": "60%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="testSourceID1"
            isBtnCreateVisible={true}
            isLoading={false}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="feeds"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <FeedsDetail
          currentPanel="feedsDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "dateCreated": 1482170593395,
              "landingPageUrl": "http://www.bbc.co.uk/news/health",
              "name": "BBC Health",
              "rssFeedUrl": "http://feeds.bbci.co.uk/news/health/rss.xml?edition=uk#",
              "sourceId": "testSourceID1",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="feedsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="feedsPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Feeds /> should renders correctly with feedsPanel and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <FeedsDetail
          currentPanel="feedsDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "dateCreated": 1482170593395,
              "landingPageUrl": "http://www.bbc.co.uk/news/health",
              "name": "BBC Health",
              "rssFeedUrl": "http://feeds.bbci.co.uk/news/health/rss.xml?edition=uk#",
              "sourceId": "testSourceID1",
            }
          }
          editedPanel={Object {}}
          expandedPanel="feedsPanel"
          isSubmit={false}
          name="feedsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="feedsPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Feeds /> should renders correctly with feedsPanel and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    />
  </div>
</section>
`;

exports[`Component <Feeds /> should renders correctly with forms error 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="feedsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="feedsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="List"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No feeds"
            filteredData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Name",
                  "width": "40%",
                },
                Object {
                  "key": "landingPageUrl",
                  "title": "Url",
                  "width": "60%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            resourceData={
              Array [
                Object {
                  "landingPageUrl": "http://www.bbc.co.uk/news/health",
                  "name": "BBC Health",
                  "sourceId": "testSourceID1",
                },
                Object {
                  "landingPageUrl": "https://www.nhs.uk/news/",
                  "name": "NHS Choices",
                  "sourceId": "testSourceID2",
                },
              ]
            }
            setOffset={[Function]}
            sortingOrder="asc"
            table="feeds"
            totalEntriesAmount={2}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;
